--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,14 @@
+html,
+body {
+    min-height: 100%;
+    background: black;
+}
+
+.wrapper {
+    min-height: 100svh;
+}
+
+
 .hide-scrollbar::-webkit-scrollbar {
     display: none;
 }
@@ -6,3 +17,4 @@
     scrollbar-width: none;
     /* Hide scrollbar for Firefox */
 }
+
